--- a/GameData/FreeIva/Localization/zh-cn.cfg
+++ b/GameData/FreeIva/Localization/zh-cn.cfg
@@ -19,6 +19,10 @@ Localization
         #FreeIVA_Tutorial_ToggleGravity = 开关重力
         #FreeIVA_Tutorial_Close = 关闭
         #FreeIVA_Tutorial_CloseForever = 不再出现
+        #FreeIVA_Tutorial_GrabProp = 抓取
+        #FreeIVA_Tutorial_UseProp = 使用
+        #FreeIVA_Tutorial_PlaceProp = 放置
+        #FreeIVA_Tutorial_ThrowProp = 扔出
 
         // Screen Message (tips)
         #FreeIVA_Message_GravityEnabled = 重力开启
